fixed css flex on wraper1

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -81,7 +81,7 @@ html {
 }
 .sample1{
     border: 10px solid lightgray;
-    width: 35%;
+    width: 40%;
 }
 /* .overlay{
     opacity:1;
@@ -174,6 +174,10 @@ html {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+    }
+    .sample1{
+        border: 10px solid lightgray;
+        width: 80%;
     }
     .upload-icon{
         margin:auto;
